crates/pardosa-schema/tests/compile_fail/serde_default_field.rs
use pardosa_schema::GenomeSafe;
#[derive(GenomeSafe)]
struct Bad {
    #[serde(default)]
    value: u32,
}
fn main() {}
